<resources>
    <string name="app_name">PointDetector</string>
    <string name="hint_input_your_address">Input your address</string>
    <string name="kilometers_format">%.3f km</string>
    <string name="miles_format">%.2f mi</string>
    <string name="action_text_search_filter">Filters</string>
    <string name="title_points_list_screen">Places nearby</string>
    <string name="title_points_add_screen">Looking for place</string>
    <string name="title_points_add_info_screen">Saving new place</string>
    <string name="button_add_point">Add new point</string>
    <string name="menu_button_import_data">Import points</string>
    <string name="hint_place_name">Place name</string>
    <string name="hint_place_address">Place address</string>
    <string name="hint_place_working_hours">Working hours</string>
    <string name="label_no_results_found">No results found</string>
    <string name="button_empty_state_add_record">Add new record</string>

    <!--Location permission-->
    <string name="title_location_permission_denied">Failed to get location permission</string>
    <string name="rationale_location_permission_text">Location permissions are needed in order the application works properly.
        Without permissions it will not be possible to calculate correct distance.</string>
    <string name="button_location_permissions_retry">Provide permissions</string>

    <string name="hint_input_place_name">Type place name</string>
    <string name="button_save">Save</string>
    <string name="error_incorrect_selected_days">Incorrect time format for selected dates</string>
    <string name="error_days_not_selected">Working days not selected</string>

    <string name="label_point_open">Open</string>
    <string name="label_point_closed">Closed</string>
    <string name="label_point_successfully_created">Point successfully created</string>

    <string name="button_create_new_point_label">Add new point!</string>
    <string name="title_empty_points_list">No data found</string>
    <string name="description_empty_points_list">No records found in local data base. To see any items try to add record by click the button below.</string>
    <string name="label_description_search_address">Try to start type location address into field upper and suggested places will be shown in the list</string>
    <string name="label_empty_search_data">Not found any data</string>
    <string name="title_location_permission_request">Location permissions not granted</string>
    <string name="button_continue_anyway">Continue anyway</string>
    <string name="button_provide_location_permissions_never_ask">Open settings</string>
    <string name="snackbar_location_permissions_denied">To provide location permissions open settings and enable it there.</string>
    <string name="label_point_deletec_action">Point was deleted. If it was wrong click on the button below</string>
    <string name="button_undo">Undo</string>
    <string name="title_point_details">Point details info</string>
    <string name="build_route">Build route</string>
    <string name="share_address">Share address</string>
    <string name="label_format_working_days">%s, %s - %s</string>
    <string name="label_sorting_type">Sorting type</string>
    <string name="label_measure_type">Measure units</string>
    <string name="button_apply_filters">Apply filters</string>
    <string name="label_nothing_selected">Empty options</string>
    <string name="title_filter_screen">Filters</string>
    <string name="message_dialog_import_places">There is nothing in your local database. Do you want to fetch places from remote source?</string>
    <string name="title_dialog_import_data">Empty local storage</string>
    <string name="title_working_hours_input">Select working hours</string>
</resources>