<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_sorting_type"
        style="@style/PointDetector.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/label_sorting_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/select_sorting_type"
        style="@style/PointDetector.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_sorting_type" />

    <TextView
        android:id="@+id/label_measure_type"
        style="@style/PointDetector.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/label_measure_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_sorting_type" />

    <RadioGroup
        android:id="@+id/select_measure_type"
        style="@style/PointDetector.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_measure_type" />

    <Button
        android:id="@+id/apply_button"
        style="@style/PointDetector.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/button_apply_filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>